# geographiclib

./: meson.build
include/GeographicLib/: Config.h.in  meson.build
src/: meson.build
